--- a/manuscript.bib
+++ b/manuscript.bib
@@ -85,6 +85,17 @@
   file = {C:\Users\uif72473\Zotero\storage\838DSUC4\Boes et al. - 2015 - The Self-Adaptive Context Learning Pattern Overvi.pdf}
 }
 
+@article{breiman1996bagging,
+  title = {Bagging Predictors},
+  author = {Breiman, Leo},
+  year = 1996,
+  journal = {Machine learning},
+  volume = {24},
+  number = {2},
+  pages = {123--140},
+  publisher = {Springer}
+}
+
 @book{breimanClassificationRegressionTrees2017,
   title = {Classification and {{Regression Trees}}},
   author = {Breiman, Friedman},
@@ -241,6 +252,17 @@
   langid = {english},
   keywords = {Artificial Intelligence (cs.AI),Machine Learning (cs.LG),Multiagent Systems (cs.MA)},
   file = {C:\Users\uif72473\Zotero\storage\U463RZQH\Fourez et al. - 2022 - An ensemble Multi-Agent System for non-linear clas.pdf}
+}
+
+@article{freund1997decision,
+  title = {A Decision-Theoretic Generalization of on-Line Learning and an Application to Boosting},
+  author = {Freund, Yoav and Schapire, Robert E},
+  year = 1997,
+  journal = {Journal of computer and system sciences},
+  volume = {55},
+  number = {1},
+  pages = {119--139},
+  publisher = {Elsevier}
 }
 
 @article{friedmanGreedyFunctionApproximation2001,
@@ -670,6 +692,17 @@
   year = 1995,
   journal = {Advances in neural information processing systems},
   volume = {8}
+}
+
+@article{wolpert1992stacked,
+  title = {Stacked Generalization},
+  author = {Wolpert, David H},
+  year = 1992,
+  journal = {Neural networks},
+  volume = {5},
+  number = {2},
+  pages = {241--259},
+  publisher = {Elsevier}
 }
 
 @article{yang2018online,
