--- a/manuscript.bib
+++ b/manuscript.bib
@@ -68,6 +68,15 @@
   publisher = {Springer}
 }
 
+@inproceedings{blanco2024explainability,
+  title = {Explainability and Interpretability of an Ensemble Multi-Agent System for Supervised Learning},
+  booktitle = {International Conference on Principles and Practice of Multi-Agent Systems},
+  author = {{Blanco-Volle}, Cl{\'e}ment and Verstaevel, Nicolas and Combettes, St{\'e}phanie and Gleizes, Marie-Pierre and Povlovitsch Seixas, Michel},
+  year = 2024,
+  pages = {335--350},
+  publisher = {Springer}
+}
+
 @incollection{boesSelfAdaptiveContextLearning2015,
   title = {The {{Self-Adaptive Context Learning Pattern}}: {{Overview}} and {{Proposal}}},
   booktitle = {{{SpringerLink}}},
@@ -83,6 +92,16 @@
   langid = {english},
   keywords = {Adaptation,Context,Cooperation,Learning,Machine learning,Multi-agent system,Self-organisation,ToRead},
   file = {C:\Users\uif72473\Zotero\storage\838DSUC4\Boes et al. - 2015 - The Self-Adaptive Context Learning Pattern Overvi.pdf}
+}
+
+@article{boggs1995sequential,
+  title = {Sequential Quadratic Programming},
+  author = {Boggs, Paul T and Tolle, Jon W},
+  year = 1995,
+  journal = {Acta numerica},
+  volume = {4},
+  pages = {1--51},
+  publisher = {Cambridge University Press}
 }
 
 @article{breiman1996bagging,
@@ -350,6 +369,16 @@
   year = 2011,
   pages = {1094--1096},
   publisher = {Springer}
+}
+
+@article{kalman1960contributions,
+  title = {Contributions to the Theory of Optimal Control},
+  author = {Kalman, Rudolf Emil and others},
+  year = 1960,
+  journal = {Bol. soc. mat. mexicana},
+  volume = {5},
+  number = {2},
+  pages = {102--119}
 }
 
 @article{keLightGBMHighlyEfficient2017,
